turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:56: error: Unmatched closing brace '}' ignored here
}
^